modified map.css to make sure header is visible

--- a/src/shared/components/UIElements/MapBoxMap/Map.css
+++ b/src/shared/components/UIElements/MapBoxMap/Map.css
@@ -1,9 +1,9 @@
 .map-container {
   position: absolute;
-  top: 0;
+  /* top: 0;
   bottom: 0;
   left: 0;
-  right: 0;
+  right: 0; */
   height: 300px;
   width: 100%;
 }
